# orchestrator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  diagnostics.rs  main.rs  mock_catalog.rs  mocking.rs  models.rs  process_control.rs  runtime.rs  scanner.rs  service_graph.rs
src/assets/branding/: README.md
src/components/: alerts-drawer.tsx  app-header.tsx  app-theme-picker.tsx  log-console.tsx  project-detail.tsx  project-list.tsx  project-mocks-editor.tsx  scan-dialog.tsx  service-topology-modal.tsx  status-pill.tsx  usage-drawer.tsx  workspace-layout.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog-shell.tsx  empty-state.tsx  field.tsx  input.tsx  scroll-area.tsx  select.tsx  stat-card.tsx  tabs.tsx  textarea.tsx
src/i18n/: index.tsx
src/i18n/translations/: en.ts  es.ts
src/lib/: app-shell.ts  tauri.ts  types.ts
src/store/: useAppStore.ts
src/styles/: _legacy-base.scss  _ui.scss  _utilities.scss  index.scss
