[package]
name = "back-orchestrator"
version = "0.1.0"
description = "Desktop orchestrator for local backend microservices"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "io-util", "time", "sync", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
